@@ -342,6 +342,18 @@ label > span,
   font-weight: 500;
   margin: 0 0 4px 0; }
 
+.shadow-large {
+  transition: box-shadow .5s;
+  box-shadow: 0 10px 30px -7.5px rgba(0, 0, 0, 0.1), 0 5px 50px 0 rgba(0, 0, 0, 0.1); }
+
+.shadow-normal {
+  transition: box-shadow .5s;
+  box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.07), 0 0 40px 0 rgba(0, 0, 0, 0.07); }
+
+.shadow-small {
+  transition: box-shadow .5s;
+  box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.07), 0 5px 20px 0 rgba(0, 0, 0, 0.07); }
+
 /**
  * Grid system
  */
@@ -360,7 +372,7 @@ input[type=button],
   align-items: center;
   background: transparent;
   border: 1px solid transparent;
-  border-radius: 4px;
+  border-radius: 2px;
   color: #121212;
   display: inline-flex;
   margin: 0;
@@ -438,7 +450,7 @@ button.button--primary {
   align-items: center;
   background: #3f95a6;
   border: 1px solid #3f95a6;
-  border-radius: 4px;
+  border-radius: 2px;
   color: #fff;
   display: inline-flex;
   margin: 0;
@@ -516,7 +528,7 @@ button.button--danger {
   align-items: center;
   background: #d62931;
   border: 1px solid #d62931;
-  border-radius: 4px;
+  border-radius: 2px;
   color: #fff;
   display: inline-flex;
   margin: 0;
@@ -591,8 +603,8 @@ button.button--danger {
 .input {
   align-items: center;
   background: #fff;
-  border: 1px solid #e3e3e3;
-  border-radius: 4px;
+  border: 1px solid #f0f0f0;
+  border-radius: 2px;
   display: inline-flex;
   padding: 0;
   position: relative;
@@ -601,26 +613,33 @@ button.button--danger {
   font-family: var(--q-font-family, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, 'Helvetica Neue', Arial, sans-serif);
   font-size: 1em;
   font-weight: 400;
-  margin: 0; }
+  margin: 0;
+  margin-bottom: 24px; }
   .input__addon {
-    background: #e3e3e3;
+    background: transparent;
     align-self: stretch;
     display: inline-flex;
     align-items: center;
     padding: 0 8px; }
+    .input__addon:first-child {
+      border-right: 1px solid #f0f0f0; }
+    .input__addon:last-child {
+      border-left: 1px solid #f0f0f0; }
   .input__envelope {
     align-items: baseline;
     background: #fff;
-    border-radius: 4px;
+    border-radius: 2px;
     display: flex;
     flex-direction: row;
     flex-grow: 1; }
     .input__envelope .input__addon {
       background: #fff; }
     .input__envelope > .input__addon:first-child {
-      border-radius: 4px 0 0 4px; }
+      border-radius: 2px 0 0 2px;
+      border-right: 1px solid transparent; }
     .input__envelope > .input__addon:last-child {
-      border-radius: 0 4px 4px 0; }
+      border-radius: 0 2px 2px 0;
+      border-left: 1px solid transparent; }
     .input__envelope > input {
       border: none;
       background-color: transparent;
@@ -634,8 +653,6 @@ button.button--danger {
       .input__envelope > input:focus {
         outline: none; }
   .input--focus, .input:focus, .input:focus-within {
-    border-color: #dec9d7; }
-    .input--focus .input__addon, .input:focus .input__addon, .input:focus-within .input__addon {
-      background-color: #dec9d7; }
+    box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.07), 0 5px 20px 0 rgba(0, 0, 0, 0.07); }
     .input--focus .input__envelope .input__addon, .input:focus .input__envelope .input__addon, .input:focus-within .input__envelope .input__addon {
       background: transparent; }
