@@ -6,11 +6,27 @@
 
     <title>Q styles</title>
     <link rel="stylesheet" href="../build/index.css" />
+    <style type="text/css">
+        .row {
+          margin-bottom: 20px;
+        }
+  
+        .box {
+          display: block;
+          height: 60px;
+          width: 60px;
+          margin: 20px 0 40px;
+        }
+    </style>
   </head>
   <body>
     <article style="align-items: center; display: flex; flex-direction: column;">
         <div class="row row--gutter-12">
             <div class="col-8 col-push-2">
+                <h1>Shadows</h1>
+                <div class="box shadow-large"></div>
+                <div class="box shadow-normal"></div>
+                <div class="box shadow-small"></div>
                 <h1>Inputs</h1>
                 <label>
                     <span>Label</span>
@@ -24,6 +40,15 @@
                         <div class="input__addon">Sufix</div>
                     </div>
                 </label>
+                <label>
+                        <span>Label</span>
+                        <div class="input">
+                            <div class="input__envelope">
+                                <input type="text" placeholder="Placeholder" value="Prefix">
+                                <div class="input__addon">Sufix</div>
+                            </div>
+                        </div>
+                    </label>
 
                 <h1>Buttons</h1>
                 <button>
