@@ -1,0 +1,25 @@
+@import "mixins/shadows";
+
+.shadow-large {
+    transition: box-shadow .5s;
+    
+    @include shadow-large();
+    &:hover {
+    }
+}
+
+.shadow-normal {
+    transition: box-shadow .5s;
+    
+    @include shadow-normal();
+    &:hover {
+    }
+}
+
+.shadow-small {
+    transition: box-shadow .5s;
+    
+    @include shadow-small();
+    &:hover {
+    }
+}
