@@ -1,4 +1,5 @@
 @import "grid";
 @import "typography";
+@import "shadows";
 @import "button";
 @import "input";
